rsync 2.5.3 (not released yet)

  ENHANCEMENTS:

    * Command to initiate connections is only shown with -vv, rather
      than -v as in 2.5.2.  Output from plain -v is more similar to
      what was historically used so as not to break scripts that try
      to parse the output.

    * Added --no-whole-file and --no-blocking-io options (Dave Dykstra)

    * Made the --write-batch and --read-batch options actually work
	and added documentation in the man page (Jos Backus)